<resources>
    <string name="app_name">BeJay</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="register_fb">Register With Facebook</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logout">Logout</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">565930543560307</string>
    <string name="gcm_sender_id">584050256402</string>

    <string name="title_activity_event">EventActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="event">Event</string>
    <string name="settings">Settings</string>
    <string name="pick_song">pick song</string>
    <string name="song_list">Song List!</string>
    <string name="convert_token">convert_token</string>
    <string name="client_id">AfCI74X2gr0LOqZ6whHyNZT1JRNn6FeELVwg5P7w btFindEvents btFindFriendsEvents</string>
    <string name="client_secret">YkVzYzh2Co8jNzpMQJg8KaJWsZy2rpsBK4DFLXChdF04Q3ddmGhw8AzVCDKIxlrP8oibmPG5kRiVJU69ti3Fd13XJACGeZ8A2D8oNLH1lD4xJtInX0vAHR7nzWKxlLRr</string>
    <!--<string name="client_id">J1Ob6LlNiSkjSDxiA6ZlltlV0ReoNCL35pIiGeAj</string>-->
    <!--<string name="client_secret">6mRJQ38UoIUaEjmL2zsuTpiZAmAZSZ41z1sQW01ZgXy08MynSoDa1xRJGSpb25p1x94RYMxPRoDN4FF0tiE3uNvseJstQl5tOS66Va22j7jBUm6xoGgGKiC6BAuBWZdS</string>-->
    <string name="provider">facebook</string>
    <string name="action_title_search_tracks">Search Tracks</string>
    <string name="action_title_add_track">Add Track</string>
    <string name="format_by_artist">by %s</string>
    <string name="format_created_by_user">created by %s</string>
    <string name="section_header_top_tracks">Top Tracks</string>
    <string name="section_header_discography">Discography</string>
    <string name="section_header_tracks">Tracks</string>
    <string name="section_header_albums">Albums</string>
    <string name="section_header_playlists">Playlists</string>
    <string name="section_header_artists">Artists</string>
    <string name="action_show_more">Show more</string>
    <string name="title_activity_event_create">Create</string>
    <string name="hint_name">Event Name</string>
    <string name="hint_details">Details (Optional)</string>
    <string name="hint_place">Place</string>
    <string name="geo_location">Geo Location</string>
    <string name="create_facebook_event">Create Facebook Event</string>
    <string name="public_event">Public</string>
    <string name="create">Create</string>
    <string name="no_location_data_provided">no location provider</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat lang</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="map">Map</string>
    <string name="facebook_friends_only">Facebook Friends Only</string>
    <string name="next">Next</string>
    <string name="email">email</string>
    <string name="test_user">Test User</string>
    <string name="today">Today</string>
    <string name="cannot_load_events">Cannot Load Events</string>
    <string name="likes">Likes</string>
    <string name="test_email_gmail_com">test.email@gmail.com</string>
    <string name="_3pm">3pm</string>
    <string name="try_again">Try Again</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="search">Search</string>
    <string name="event_search">Event Search</string>
</resources>
