<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:checked="false"
            android:title="@string/profile" />
        <item
            android:id="@+id/event"
            android:checked="false"
            android:title="@string/event" />
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:checked="false"
            android:title="@string/logout" />
    </group>
</menu>