<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rocks.itsnotrocketscience.bejay.login.LoginFragment">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:textColor="@color/white"
        android:hint="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btLogin"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:text="@string/login"/>

</RelativeLayout>
