<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="60dp"
                tools:context="rocks.itsnotrocketscience.bejay.event.create.EventCreateFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <TableLayout
        android:id="@+id/tableLayoutDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayoutTitle"
        android:padding="15dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/tvStartDate"
                android:padding="3dip"
                android:drawableLeft="@drawable/ic_clock"
                android:text="Today"/>

            <TextView
                android:id="@+id/tvStartTime"
                android:padding="3dip"
                android:text="3pm"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvEndDate"
                android:padding="3dip"
                android:layout_marginLeft="22dp"
                android:text="End Date."/>

            <TextView
                android:id="@+id/tvEndTime"
                android:padding="3dip"
                android:text="End Time"/>
        </TableRow>
    </TableLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayoutDateTime">

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pen"
            android:hint="@string/hint_details"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutDetails">

        <EditText
            android:id="@+id/etPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_home"
            android:hint="@string/hint_place"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutGPSn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutPlace">

        <EditText
            android:id="@+id/etGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_gps"
            android:focusable="false"
            android:hint="@string/geo_location"/>
    </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayoutGPSn"
            android:text="@string/create_facebook_event"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:orientation="horizontal"
        android:layout_alignRight="@+id/textInputLayoutGPSn"
        android:layout_alignEnd="@+id/textInputLayoutGPSn">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/public_event"
            android:id="@+id/radioButton"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_event"
            android:id="@+id/radioButton2"
            android:layout_gravity="right"/>

    </RadioGroup>


</RelativeLayout>
